# wind-energy-forecasting

./: .devcontainer.json  .gitignore  README.md  build.sbt  pyproject.toml
.continue/mcpServers/: mcp.json
.devcontainer/: 1build.sh  2stop_remove_run_mount.sh  Dockerfile  Zeppelin_Dockerfile  environment.yml  pyspark_examples.ipynb
.roo/: mcp.json
0ARCHIVE/: CountingApp.scala  WordCount.scala
experiments/: EDA.ipynb  EDA.py
experiments/0ARCHIVE/: InitEDA_2M4EFQR3T.zpln  mlflow_quickstart.ipynb
notebooks/: EDA.ipynb  EDA.zpln  InitEDA_2M4EFQR3T.zpln
src/main/resources/: application.conf
src/main/scala/com/mathewlee/windenergyforecasting/: Main.scala  package.scala
src/main/scala/com/mathewlee/windenergyforecasting/config/: AppConfig.scala
src/main/scala/com/mathewlee/windenergyforecasting/eda/: EDA.scala
src/main/scala/com/mathewlee/windenergyforecasting/pipelines/: Pipeline.scala
src/main/scala/com/mathewlee/windenergyforecasting/transformations/: FeatureEngineering.scala
src/main/scala/com/mathewlee/windenergyforecasting/utils/: SparkSessionWrapper.scala  SparkUtils.scala
src/test/scala/com/mathewlee/windenergyforecasting/features/: WordCountTest.scala
src/wind_energy_forecasting/: __init__.py
